<resources>
    <string name="app_name">BeBetter</string>
    <string name="nameLogin">E-mail</string>
    <string name="passwordMain">Password</string>
    <string name="loginMain">LOGIN</string>
    <string name="numbersOfAttemptsMain">Number of attempts:</string>
    <string name="tvSecondary">Keep it secret, keep it safe</string>
    <string name="newAccount"><u>New account?</u></string>
    <string name="etNameRegistration">Full name</string>
    <string name="etEmailRegistration">E-mail</string>
    <string name="etPasswordRegistration">Password</string>
    <string name="claimRegistration">Claim</string>
    <string name="alreadyHaveAccountRegistration"><u>Already have an account?!</u></string>
    <string name="secondaryLogout">Logout</string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="reset_password">Reset password</string>
    <string name="email">Email</string>
    <string name="profileImage">TODO</string>
    <string name="btnEdit">Update Name</string>
    <string name="change_password">Update Password</string>
    <string name="put_your_new_email_here">Put your new email here</string>
    <string name="new_email">Email</string>
    <string name="save_email">Save</string>
    <string name="editName">Name</string>
    <string name="edited_name">Full Name</string>
    <string name="tvEditInfo">Use your full name, so your friends can find you, Space Ranger.</string>
    <string name="update_email">Update Email</string>
    <string name="update">Update</string>
    <string name="update_password">Update Password</string>
    <string name="ex_passphrase">Ex: You.are.awesome!</string>
    <string name="tip_want_a_great_password_try_a_sentence">Try a passphrase. Ex: &quot;You.are.110%.awesome!&quot;</string>
    <string name="your_password_needs_to_be_at_least_6_characters_long">Your passphrase needs to be at least 6 characters long.</string>
    <string name="uploadButtom">TODO</string>
    <string name="upload_profle_picture">Upload</string>
    <string name="uploadImage">TODO</string>
    <string name="buttonSaveUpdate">Save</string>
    <string name="imgBtnUploadUpdate">TODO</string>
    <string name="ivUploadUpdate">TODO</string>
    <string name="pictures_are_forced_into_1_2_aspect_ratio">Profile pictures are forced into 1:2 aspect ratio</string>
    <string name="notifs_here_buddy">Notifications here buddy</string>
    <string name="new_friends_here_buddy">Friends+ here buddy</string>
    <string name="you_here_buddy">You here buddy</string>
    <string name="feed_here_buddy">Feed here buddy</string>

    <!-- Menu -->
    <string name="btnMoreFragmentYou" />
    <string name="logout">Logout</string>
    <string name="update_password_menu">Update Password</string>
    <string name="update_e_mail">Update E-mail</string>
    <string name="feed">Feed</string>
    <string name="notifs">Notifs</string>
    <string name="friends">Friends+</string>
    <string name="you">You</string>
    <string name="enter_your_friends_name">If you don\'t know your friends name, are you even friends?</string>
    <string name="searchFriends">Find Your Friends</string>
    <string name="imageResourceListLayout" />
    <string name="profile_name">Profile Name</string>
    <string name="imageFriends">image</string>
    <string name="nameFriends">nameFriends</string>
    <string name="logo">TODO</string>
    <string name="so_your_friends_can_find_you_space_ranger">So your friends can find you, space ranger.</string>
    <string name="backgroundYouFragment">TODO</string>
    <string name="send_friend_request">send friend request</string>
    <string name="display_name">Display Name</string>
    <string name="acceptFriendRequest">Accept Friend Request</string>
    <string name="CancelFriendRequest">Cancel Friend Request</string>
    <string name="decline_friend_request">decline friend request</string>
    <string name="Unfriend">Unfriend</string>
    <string name="your_closest_friends">Your closest friends</string>
    <string name="search_for_your_friends_3"><![CDATA[Add your closest friends and we will help improve your friendship]]></string>
    <string name="their_friends">Their Friends</string>
    <string name="action">ACTION</string>
    <string name="todo">TODO</string>
    <string name="camerabtn">camerabtn</string>
    <string name="cameraView">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>

    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>

    <string name="title_activity_image_preview">ImagePreview</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="imagePreview">TODO</string>
    <string name="description">Description</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="done">done</string>
    <string name="feed_description"><![CDATA[Experiences, both you and a friend have done, will be shown here.]]></string>
    <string name="join">Join</string>
    <string name="swipe_up">TODO</string>
    <string name="button">Button</string>
    <string name="textviewFullHD">TextView</string>
    <string name="invite_by_email">Invite by Email</string>
    <string name="u_so_pretty">U so pretty!</string>
    <string name="omg_so_pretty">OMG So Pretty!</string>
    <string name="tap_to_join">Tap To Join</string>
    <string name="i_trust_you">I Trust You</string>
    <string name="too_beautiful">Too Beautiful!</string>
    <string name="tap_anywhere_to_join_memory">Tap and HOLD to toggle off this guide - Tap anywhere to join this memory</string>
    <string name="you_are_lovely">You Are Lovely</string>
    <string name="deleteProfileImage">TODO</string>
    <string name="search">Search</string>
    <string name="friendslist_and_you_ll_be_able_to_invite_them_from_here">FriendsList. You\'ll be able to invite your closest friends from here.</string>
    <string name="feedback">Feedback</string>

    <!-- Feedback fields -->
    <string name="submitFeedBack">Submit feedback</string>
    <string name="feedbackSubmitHeader">Title</string>
    <string name="submitFeedBackHeaderHint">What does your feedback concern?</string>
    <string name="submitFeedBackTextHint">Feedback goes here</string>
    <string name="feedbackSubmit">Submit</string>
    <string name="feedbackToastSuccess">Feedback submitted</string>
    <string name="feedbackToastFailure">Feedback was not submitted</string>


</resources>
