<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="org.faith.bebetter.YouPage.ProfileActivity">


    <View
        android:id="@+id/viewYourProfile"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:background="@drawable/underline"

        android:contentDescription="@string/backgroundYouFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProfileName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#0000FF99"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/tvSecondary"
        android:textColor="@color/TextColorWhite"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/viewYourProfile"
        app:layout_constraintEnd_toEndOf="@+id/viewYourProfile"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePicFragment"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_decline_req_btn"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:background="@drawable/button_dull"
        android:fontFamily="sans-serif"
        android:text="@string/decline_friend_request"
        android:textColor="@color/TextColorWhite"
        android:textColorHint="@color/TextColorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/profile_send_req_btn"
        app:layout_constraintEnd_toEndOf="@+id/profile_send_req_btn"
        app:layout_constraintStart_toStartOf="@+id/profile_send_req_btn"
        app:layout_constraintTop_toTopOf="@+id/profile_send_req_btn" />

    <Button
        android:id="@+id/profile_send_req_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_attention"
        android:fontFamily="sans-serif-medium"
        android:foregroundGravity="center"
        android:gravity="center"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/send_friend_request"
        android:textColor="@color/TextColorBlack"
        android:textColorHint="@color/TextColorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePicFragment"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFriendListProfile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFriendListTitle"
        app:layout_constraintVertical_bias="1.0" >

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/ivProfilePicFragment"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:contentDescription="@string/profileImage"
        app:layout_constraintBottom_toBottomOf="@+id/viewYourProfile"
        app:layout_constraintStart_toStartOf="@+id/viewYourProfile"
        app:layout_constraintTop_toTopOf="@+id/viewYourProfile"
        app:srcCompat="@drawable/ic_upload_image" />

    <TextView
        android:id="@+id/textViewFriendListTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/their_friends"
        android:textColor="@color/TextColorWhite"
        android:textColorHint="@color/TextColorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewYourProfile" />


</androidx.constraintlayout.widget.ConstraintLayout>